--- a/cv/education.tex
+++ b/cv/education.tex
@@ -13,7 +13,7 @@
     {University of Exeter} % Institution
     {MSc in Data Science with Artificial Intelligence} % Degree
     {Exeter, UK} % Location
-    {} % Date(s)
+    {2023} % Date(s)
     {
       \begin{cvitems} % Description(s) bullet points
         \item {Participated in advanced coursework on machine learning, and computer vision • Proficient in using various Python libraries such as Keras, Scikit-learn, Pandas, Numpy, and SciPy for data manipulation, analysis, and visualization • Utilized Tensorflow for creating and training neural networks}
@@ -25,7 +25,7 @@
     {Pasargad Institute of Higher Education} % Institution
     {BSc in Computer Engineering - Software} % Degree
     {Shiraz, Iran} % Location
-    {} % Date(s)
+    {2017} % Date(s)
     {
       \begin{cvitems} % Description(s) bullet points
         \item {Graduated with Distinction • TA for Database design, Algorithm design, Data structure, and Automata courses.}
