--- a/cv/experience.tex
+++ b/cv/experience.tex
@@ -17,12 +17,9 @@
     {Aug 2020 - Aug 2022} % Date(s)
     {
       \begin{cvitems} % Description(s) of tasks/responsibilities
-        \item {Utilize SQL expertise in a BI environment for comprehensive data analysis, enabling data-driven insights.}
-        \item {Create integrated dashboards and communicate actionable analytical insights to senior leaders, driving business growth.}
-        \item {Led the successful development and maintenance of a robust accounting program, instrumental in streamlining financial processes.}
-        \item {Devised and implemented an innovative solution within the accounting app, resulting in a remarkable 15\% increase in company profits.}
-        \item {Actively participated in code reviews and provided guidance to junior developers on the team.}
-        \item {Utilized C\#, SQL, Git, and .Net Core to build efficient, scalable and secure code.}%
+        \item {Successfully resolved a recurring payment verification issue in the accounting department by leading the development of an API integration with a bank API, creating SQL queries and stored procedures for record comparison, and achieving a zero-error rate post-deployment, significantly enhancing operational efficiency.}
+        \item {Streamlined net profit calculations for a legacy accounting software, facing a time-sensitive 4-week deadline. Developed a solution, utilizing SQL querying and C\# programming to reverse-engineer the software, creating a dashboard on top of the existing database, resulting in a 10\% improvement in accuracy compared to the previous software, and successfully deployed the project ahead of schedule.}
+        \item {Leveraged SQL expertise in a BI environment for comprehensive data analysis, enabling data-driven insights.}
       \end{cvitems}
     }%
 %---------------------------------------------------------
@@ -33,29 +30,29 @@
     {May 2017 - Aug 2020} % Date(s)
     {
       \begin{cvitems} % Description(s) of tasks/responsibilities
-        \item {Maintained the company's computer systems, ensuring their smooth and continuous operation.}
+        \item {Maintained the company's network, ensuring its smooth and continuous operation.}
         \item {Quickly troubleshot and resolved network and computer issues, resulting in a reduction of recorded downtime by 30\%.}
-        \item {Configured and managed Microsoft Active Directory, Cisco Routing and Switching, and other network equipment.}
+        \item {Configured and managed Microsoft SQL Server, FTP Server, and other network equipment.}
         \item {Implemented a disaster recovery plan that helped the company to recover quickly from unexpected failures.}
         % \\\textbf{Technical Skills:} Active Directory, Windows Server, Cisco Networking, LAN-WAN, Network Troubleshooting
         % \\\textbf{Soft Skills:} Problem-solving, Adaptability, Attention to Detail}%
       \end{cvitems}%
     }%
 %---------------------------------------------------------
-  \cventry
-    {Pars Novin Co.} % Organisation
-    {Network Technician (Internship)} % Job title
-    {Shiraz, Iran} % Location
-    {Feb 2017 - May 2017} % Date(s)
-    {
-      \begin{cvitems} % Description(s) of tasks/responsibilities
-        \item {Installed and configured network equipment for clients, including LAN networks and passive equipment.}
-        \item {Assisted with the design of network infrastructure, which led to the successful implementation of several projects.}
-        \item {Troubleshot and resolved connection problems for clients, resulting in increased customer satisfaction.}%
-        %\\\textbf{Technical Skills:} LAN-WAN, Network Design, Network Troubleshooting, IPv4, CCTV Installation
-        %\\\textbf{Soft Skills:} Teamwork}
-      \end{cvitems}
-    }
+  % \cventry
+  %   {Pars Novin Co.} % Organisation
+  %   {Network Technician (Internship)} % Job title
+  %   {Shiraz, Iran} % Location
+  %   {Feb 2017 - May 2017} % Date(s)
+  %   {
+  %     \begin{cvitems} % Description(s) of tasks/responsibilities
+  %       \item {Installed and configured network equipment for clients, including LAN networks and passive equipment.}
+  %       \item {Assisted with the design of network infrastructure, which led to the successful implementation of several projects.}
+  %       \item {Troubleshot and resolved connection problems for clients, resulting in increased customer satisfaction.}%
+  %       %\\\textbf{Technical Skills:} LAN-WAN, Network Design, Network Troubleshooting, IPv4, CCTV Installation
+  %       %\\\textbf{Soft Skills:} Teamwork}
+  %     \end{cvitems}
+  %   }
 % %---------------------------------------------------------
 %     \cventry
 %     {Store Assistant} % Job title
