--- a/cv/summary.tex
+++ b/cv/summary.tex
@@ -14,7 +14,9 @@
 \begin{cvparagraph}
 
 %---------------------------------------------------------
-Highly skilled Data Scientist with with 5+ years of experience in Technology and 2+ years of proven expertise in SQL-based data analysis, delivering innovative solutions. A University of Exeter post-graduate student enrolled in the Data Science with Artificial Intelligence. Experienced in communicating actionable insights to senior leaders, driving business growth. Ideal candidate for Data Analyst roles.
+% Highly skilled Data Scientist with with 5+ years of experience in Technology and 2+ years of proven expertise in SQL-based data analysis, delivering innovative solutions. A University of Exeter post-graduate student enrolled in the Data Science with Artificial Intelligence. Experienced in communicating actionable insights to senior leaders, driving business growth. Ideal candidate for Data Engineer roles.
+
+Highly skilled Data Scientist with over 5 years of experience in technology and 2+ years of proven expertise in SQL-based data analysis. Recently finished an MSc in Data Science with Artificial Intelligence at the University of Exeter. Experienced in delivering innovative solutions, communicating actionable insights to senior leaders, and driving business growth. Passionate about actively learning new technologies and methods to continually improve performance and add exceptional value to the company. Ideal candidate for Data Scientist roles.
 %
 %Jovial developer with a can-do attitude, 2 years of dynamic experience in web development, algorithms and machine learning, and a deep understanding of various programming languages. Currently looking for software development positions in the UK.
 \end{cvparagraph}
