--- a/main.tex
+++ b/main.tex
@@ -44,7 +44,7 @@
 % \position{Software Architect{\enskip\cdotp\enskip}Security Expert}
 % \address{Exeter, UK}
 \ifrenderloc
-  \address{Exeter, UK}
+  \address{London, UK}
 \fi
 \mobile{+44 (0) 78736 57135}
 \email{sinaataei@outlook.com}
@@ -70,7 +70,7 @@
 %-------------------------------------------------------------------------------
  %	BIBLIOGRAPHY
  %-------------------------------------------------------------------------------
-\addbibresource{cv/references.bib}
+%\addbibresource{cv/references.bib}
 
 \usepackage{subfiles}
 
