--- a/sections/cover.tex
+++ b/sections/cover.tex
@@ -36,29 +36,132 @@
 % Defines an enclosure for letter (cover letter only, optional)
 % Usage: \letterenclosure[<enclosure name>]{<enclosure>}
 \begin{cvletter}
-\recipientname{LiveScore Group\texttrademark}
-\recipientaddress{25 Golden Square\\London\\w1f 9ls}
-\lettertitle{Application for Insights Analyst position}
-\letterdate{\today}
-\letteropening{Dear hiring manager,}
-
-
 \letterclosing{Sincerely,}
 % \letterenclosure[Sina]{I have no idea what's going on here}
 
+% \recipientname{JPMorgan Chase \& Co.}
+% \recipientaddress{25 Bank Street\\Canary Wharf\\London}
+% \lettertitle{Application for Data Scientist role}
+% \letterdate{\today}
+% \letteropening{Dear hiring team,}
+
+% \makelettertitle
+
+% I am writing to express my strong interest in the Data Engineer position , as advertised on your website. With a proven track record in data engineering, a deep understanding of Python, SQL, and cloud technologies, and a passion for driving impactful change in the FinTech industry, I am excited about the opportunity to contribute to this role.
+
+% Having reviewed your job description, I am compelled by the pivotal role of a Data Engineer. The prospect of working on the forefront of your data acquisition system resonates strongly with my experience and aspirations. With over 5 years of experience in technology and 2+ years in SQL-based data analysis, I have honed my skills in managing complex data pipelines and delivering actionable insights to senior leadership. I am particularly excited about the prospect of applying my experience to an ESG environment, contributing to the ethical investment strategies that your platform supports.
+
+% My proficiency in Python, SQL, and cloud technologies aligns perfectly with the technical requirements of the role. Throughout my career, I have been involved in architecting efficient data processing workflows, leveraging my expertise to build integrated dashboards and communicate insights that drive business growth.
+
+% I am eager to contribute my knowledge and experience to the company. As someone who is accustomed to leading in a dynamic and fast-paced environment, I am confident in my ability to take ownership of data engineering projects and drive tangible results.
+
+% Thank you for considering my application. I look forward to the opportunity to discuss how my experience aligns with your needs in more detail.
+
+
+% I am writing to express my strong interest in the Data Engineer role at ITV plc. With a background in data science, software development, and a keen desire to embrace new challenges, I am excited to contribute to your dynamic data team.
+
+% My experience as a seasoned Data Scientist and Software Developer has equipped me with a diverse skill set, including SQL-driven insights, dashboard creation, and data analysis. While my expertise spans various domains, I recognize that the Data Engineer role at ITV places emphasis on certain technologies such as Spark, Scala, and cloud services.
+
+% I want to address that while I do not have direct experience with Spark and Scala, I am a quick learner with a proven track record of mastering new technologies. My proficiency in languages like Python, C, and SQL, as well as my academic pursuit in Data Science with AI, exemplifies my ability to adapt and excel in technical environments. My involvement in coding contests, such as the ACM coding contest, showcased my agility in acquiring skills swiftly and effectively.
+
+% I am dedicated to continuous growth and learning. Your mention of cloud services aligns with my future aspirations, and I am committed to bridging any knowledge gaps to contribute effectively to your team. I am confident that my strong foundation in data analysis, programming, and my enthusiasm for learning will enable me to become proficient in the technologies vital for the role.
+
+% I am drawn to ITV not only for its innovative projects but also for its commitment to fostering growth in its employees. The opportunity to learn from experienced professionals at ITV's award-winning Academy is particularly appealing. I am excited about the prospect of collaborating with cross-functional teams to develop cutting-edge solutions that leverage my existing strengths while expanding my skill set.
+
+% Thank you for considering my application. I am eager to discuss how my background, experience, and dedication to growth align with the goals of ITV. I look forward to the possibility of contributing to your team and making a significant impact.
+
+
+% I am writing to express my enthusiastic interest in the DataOps Engineer position at CosmoTrace. With my comprehensive background in data engineering, software development, and a passion for optimizing data workflows, I am excited about the opportunity to contribute to your team and champion best practices in software and data engineering.
+
+% My experience as an accomplished Data Scientist and Software Developer, coupled with my ongoing pursuit of an MSc in Data Science with Artificial Intelligence, has instilled in me a deep understanding of data processing, pipeline orchestration, and cloud technologies. The responsibilities outlined in the job description, from building and orchestrating data pipelines to enabling seamless collaboration between Data Scientists and Analysts, resonate with my expertise and aspirations.
+
+% My skill set aligns with the requirements of the role:
+% - Agile methodologies and DevOps principles have been integral to my software development experience, enabling rapid iterations and efficient delivery.
+% - Proficiency in SQL and working with databases, including Microsoft SQL Server and MySQL, has enabled me to manipulate and transform data effectively.
+% - My background in software development and data analysis uniquely positions me to collaborate effectively with cross-functional teams, driving synergy between developers, designers, and data scientists.
+
+% As a committed learner, I am eager to embrace the challenges presented by the CosmoTrace DataOps Engineer role. While I have not directly worked with Athena, BigQuery, or Snowflake, my adaptability and experience in utilizing similar technologies equip me to quickly master new platforms. My experience in designing and implementing data pipelines, as well as my ability to work with public cloud providers, demonstrates my capability to address the responsibilities of the role.
+
+% I am confident that my skills in data validation, CI/CD automation, and my dedication to excellence align with your vision.
+
+% Thank you for considering my application. I am enthusiastic about the possibility of contributing to CosmoTrace's mission and collaborating with a team that values innovation and efficient data utilization. I would welcome the opportunity to discuss how my background aligns with your team's goals in further detail.
+
+
+% I am writing to express my strong interest in the Investments Technology Data Engineer position within the Quantitative Technology (Quant Tech) Team at Janus Henderson, as advertised. With a background in Data Science and Artificial Intelligence, along with extensive experience in technology and data analysis, I am confident that my skills and passion for innovation align well with the goals of Janus Henderson.
+
+% Over the course of my 5+ years as an experienced Data Scientist, I have honed my expertise in data analysis, predictive modeling, and utilizing SQL-driven insights to drive business growth. I have a proven track record of successfully leveraging data to deliver actionable insights to senior leaders, a skillset that resonates with Janus Henderson's commitment to providing superior financial outcomes through differentiated insights. My 2+ years of experience in SQL-based analysis further solidify my proficiency in working with data and databases to extract valuable insights.
+
+% My recent pursuit of an MSc in Data Science with Artificial Intelligence at the University of Exeter showcases my dedication to staying at the forefront of technological advancements. I have hands-on experience with Python, including libraries such as NumPy, Pandas, Keras, Tensorflow, and Matplotlib, which are crucial tools for data manipulation, analysis, and visualization. Furthermore, my experience with cloud platforms like Azure, knowledge of Apache Spark, and familiarity with Snowflake reflect my ability to work within modern technological landscapes.
+
+% What excites me about the Investments Technology Data Engineer role is the opportunity to contribute to innovative data-driven solutions that empower fund managers with enhanced decision-making capabilities. My history of building efficient, scalable, and secure code using C, SQL, Git, and .Net Core, combined with my passion for problem-solving and collaborative work, aligns seamlessly with the team-oriented and excellence-driven culture at Janus Henderson.
+
+% With my educational background, hands-on experience, and enthusiasm for continuous learning, I am confident in my ability to excel as an Investments Technology Data Engineer within the Quant Tech team. I am excited about the prospect of contributing my technical prowess and data-driven insights to Janus Henderson's mission of providing superior financial outcomes for clients.
+
+% Thank you for considering my application. I look forward to the opportunity to discuss how my skills and experiences align with the goals of the Investments Technology Data Engineer role at Janus Henderson.
+
+
+% I am writing to express my enthusiastic interest in the Data Analyst/Data Scientist role within the Fraud, Financial Crime \& Onboarding team at JPMorgan Chase \& Co. With a strong background in data science, and analytics, I am excited about the opportunity to contribute my expertise to a dynamic and innovative team.
+
+% My journey in the field of data science began with a BSc in Computer Engineering, followed by an MSc in Data Science with Artificial Intelligence from the University of Exeter. Throughout my academic pursuits and professional experiences, I have developed a solid foundation in data analytics and a deep understanding of machine learning techniques. My experience as a Software Developer at Hadish Communication Co., where I led BI-driven analysis and developed efficient, scalable code, has equipped me with the technical skills necessary for this role.
+
+% What excites me most about this role is the opportunity to leverage my expertise to combat fraud and protect customers while enhancing their banking experience. My experience at Hadish Communication Co. included comprehensive data analysis, integrated dashboard creation, and driving business growth through actionable insights, which closely aligns with the responsibilities of optimizing fraud monitoring systems and reducing genuine customer friction described in the role description.
+
+% Additionally, my proficiency in SQL and Python, combined with my ability to translate complex analysis results into actionable business recommendations, positions me well to contribute to the success of the Fraud Product function.
+
+% As an experienced data scientist, I am well-versed in working within dynamic and fast-evolving environments, delivering results while meeting tight deadlines. My passion for data-driven decision-making and my ability to thrive in a true agile setting align seamlessly with the ethos of innovation and adaptability that JPMorgan Chase \& Co. embodies.
+
+% I am eager to bring my skills and enthusiasm to the team to contribute to the creation of a secure and seamless banking experience for customers. Thank you for considering my application. I look forward to the opportunity to discuss how my background and experiences align with your team's goals.
+
+
+% \recipientname{ComplyAdvantage}
+% \recipientaddress{London}
+% \lettertitle{Application for Senior Data Scientist role}
+% \letterdate{\today}
+% \letteropening{Dear hiring manager,}
+
+% \makelettertitle
+
+% I am writing to express my strong interest in the Senior Data Scientist position at ComplyAdvantage. With over 5 years of experience in development and a current pursuit of an MSc in Data Science with Artificial Intelligence from the University of Exeter, I am excited by the prospect of contributing my advanced skills and expertise to your dynamic team.
+
+% Throughout my career, I have consistently demonstrated my ability to leverage data-driven insights to solve complex challenges. My background as a Software Developer at Hadish Communication Co. equipped me with strong SQL-driven analytical capabilities and the adeptness to create insightful dashboards that catalyzed data-informed decisions. I thrived in a role that demanded innovation and contributed to a remarkable 15\% profit increase by developing an accounting program, showcasing my deep understanding of data's potential to drive growth.
+
+% As a Senior Data Scientist, I understand the significance of seamless collaboration between Engineering, Data Analytics, and Product Teams. My experience in cross-functional cooperation and my profound grasp of data sources will enable me to contribute to better data unification. My role in designing data metrics aligned with business requirements and customer feedback, as well as my proficiency in Python, allows me to translate complex insights into actionable outcomes.
+
+% With a firm foundation in machine learning frameworks such as Scikit-learn, and TensorFlow, I have tackled projects like the ML-based stock price prediction and tweet analysis, where I harnessed the power of deep learning to glean valuable insights. Moreover, my hands-on experience as a Core Developer in a startup contest underscores my ability to deliver results, foster innovation, and mentor junior members of the team.
+
+% The values and mission of ComplyAdvantage resonate with me deeply. My passion for neutralizing financial crime aligns with the company's vision, and my diverse technical skills, position me to excel in this role.
+
+% I am eager to contribute to your fast-growing team and take part in shaping a future where financial crime is eradicated. Thank you for considering my application. I am excited about the opportunity to discuss how my background and expertise align with ComplyAdvantage's goals.
+
+\recipientname{LiveScore Group}
+\recipientaddress{London, England, United Kingdom}
+\lettertitle{Application for Principal Econometrician/Data Scientist role}
+\letterdate{\today}
+\letteropening{Dear hiring manager,}
+
 \makelettertitle
 
-I am writing to express my enthusiastic interest in the Insights Analyst role at LiveScore Group\texttrademark. As a highly skilled Data Scientist with a proven track record of driving innovation and delivering actionable insights, I believe my expertise aligns perfectly with your mission to innovate and add value wherever possible.
-With over 5 years of experience in the Technology sector and 2+ years of specialized proficiency in SQL-based data analysis, I am well-versed in partnering with various teams to understand their business needs analytically. The opportunity to be part of a rapidly expanding business and a team that is empowered to make change truly excites me, and I am eager to contribute to the long-term success of the Insights team at LiveScore Group\texttrademark.
+\begin{cvletter}
+I am writing to express my strong interest in the Principal Econometrician/Data Scientist position within the Marketing \& Business Insights team at LiveScore Group. As an accomplished Data Scientist with a diverse background and a commitment to delivering actionable insights through advanced analytical techniques, I am confident that my skills and experience align perfectly with the requirements of this role.
 
-In my previous role as a Software Developer at Hadish Communication Co., I employed my expertise in SQL and created various views and reports of customer online payments, aiding in payment verification and streamlining the accounting division. Additionally, I implemented an integrated data-driven dashboard and successfully persuaded the leaders to take action based on the insights provided by it.
-Throughout my career, I have demonstrated a passion for continuous learning and analytical creativity. This has enabled me to innovate in the face of complex business problems, allowing me to provide practical and effective solutions. Moreover, my technical proficiency extends beyond SQL, and I am confident in my ability to adapt and thrive in a dynamic and evolving environment like LiveScore Group\texttrademark.
+In my previous role as a Software Developer at Hadish Communication Co., I have demonstrated my ability to leverage data-driven decision-making to drive operational efficiency and business growth. I have a proven track record of leading projects and delivering innovative solutions that have significantly improved processes and accuracy. For instance, I successfully resolved a recurring payment verification issue by developing an API integration and utilizing SQL-based data analysis, achieving a zero-error rate post-deployment. Additionally, I streamlined net profit calculations for a legacy accounting software, resulting in a 15\% improvement in accuracy through SQL querying and C\# programming.
 
-I am confident that my analytical skills, technical expertise, and persuasive communication abilities would make me a valuable asset to the Insights team. I am eager to leverage my knowledge and experience to become a subject matter expert on the customer journey, from acquisition to deposit, and to support the development, setting, and actioning of KPI's throughout the business.
+My academic background further reinforces my qualifications for this role. I recently completed an MSc in Data Science with Artificial Intelligence at the University of Exeter, where I gained advanced knowledge in machine learning, deep learning, and data analysis. I have extensive experience using Python, including libraries such as NumPy, Pandas, Scikit Learn, TensorFlow, and Matplotlib, making me proficient in data manipulation, analysis, and visualization.
 
-Thank you for considering my application. I am genuinely excited about the opportunity to contribute to the success of LiveScore Group\texttrademark, and I am eager to discuss in more detail how my skills and experience align with the Insights role. I look forward to the possibility of joining your esteemed team.
+Furthermore, I have a strong foundation in SQL, including database design, stored procedures, and database management. My expertise extends to statistical modeling, aligning perfectly with the requirements of the Principal Econometrician role. I have also had the opportunity to work on projects that involved data visualization, which would be valuable in effectively communicating complex outputs to stakeholders.
+
+I am highly motivated, proactive, and adaptable, with a passion for technology and engineering. I thrive in collaborative environments and am eager to contribute to building a best-in-class in-house capability, leveraging customer-level data and advanced analytical techniques to drive growth and profitability for LiveScore Group.
+
+I am excited about the opportunity to join LiveScore Group. I am confident that my skills and experience make me a strong fit for this role, and I am committed to contributing to the continued success of the Marketing \& Business Insights team.
+
+Thank you for considering my application. I look forward to the opportunity for further discussion and the possibility of contributing to the success of LiveScore Group.
+\end{cvletter}
 
 \makeletterclosing
+
+\vspace*{\fill}
+\centering{\textbf{References available upon request.}}
+
 \end{cvletter}
 
 \end{document}
